huge-search-version-2

--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
 <body>
 <div class="wrapper">
 	<header>
-			<form>
-				<input type="search" name="ba-search" placeholder="Search..." >
-				<input type="submit" value="" >
+			<form action="#" method="post" name="form-search">
+				<input class="ba-search" type="search" name="ba-search" placeholder="Search..." >
+				<button class="ba-submit" type="submit" value="" ></button>
 			</form>
 	</header>
 	<main class="container" >
 			<aside class="people">
-				<h3>People</h3>
+				<h2>People</h2>
 				<ul>
-					<li><a href="#"><img src="img/SaraSoueidan.jpeg" height="50" width="50" alt="Sara Soueidan"><span>Sara Soueidan</span></a></li>
-					<li><a href="#"><img src="img/RachelSmith.png" height="50" width="50" alt="Rachel Smith"><span>Rachel Smith</span></a></li>
-					<li><a href="#"><img src="img/PeterFinlan.jpeg" height="50" width="50" alt="Peter Finlan"><span>Peter Finlan</span></a></li>
-					<li><a href="#"><img src="img/PatrickCox.png" height="50" width="50" alt="Patrick Cox"><span>Patrick Cox</span></a></li>
-					<li><a href="#"><img src="img/TimHolman.jpeg" height="50" width="50" alt="Tim Holman"><span>Tim Holman</span></a></li>
-					<li><a href="#"><img src="img/ShaunDona.jpeg" height="50" width="50" alt="Shaun Dona"><span>Shaun Dona</span></a></li>
+					<li><a href="#"><img src="img/SaraSoueidan.jpeg" height="50" width="50" alt="Sara Soueidan"><h3>Sara Soueidan</h3></a></li>
+					<li><a href="#"><img src="img/RachelSmith.png" height="50" width="50" alt="Rachel Smith"><h3>Rachel Smith</h3></a></li>
+					<li><a href="#"><img src="img/PeterFinlan.jpeg" height="50" width="50" alt="Peter Finlan"><h3>Peter Finlan</h3></a></li>
+					<li><a href="#"><img src="img/PatrickCox.png" height="50" width="50" alt="Patrick Cox"><h3>Patrick Cox</h3></a></li>
+					<li><a href="#"><img src="img/TimHolman.jpeg" height="50" width="50" alt="Tim Holman"><h3>Tim Holman</h3></a></li>
+					<li><a href="#"><img src="img/ShaunDona.jpeg" height="50" width="50" alt="Shaun Dona"><h3>Shaun Dona</h3></a></li>
 				</ul>
 			</aside>
 			<aside class="popular">
-				<h3>Popular</h3>
+				<h2>Popular</h2>
 				<ul>
-					<li><a href="#"><img src="img/PagePreloadingEffect.png" height="50" width="50" alt="Page Preloading Effect"><span>Page Preloading Effect</span></a></li>
-					<li><a href="#"><img src="img/ArrowNavigationStyles.png" height="50" width="50" alt="Arrow Navigation Styles"><span>Arrow Navigation Styles</span></a></li>
-					<li><a href="#"><img src="img/HoverEffectsIdeasNew.png" height="50" width="50" alt="Ideas for Subtle Hover Effects"><span>Ideas for Subtle Hover Effects</span></a></li>
-					<li><a href="#"><img src="img/FreebieHalcyonDays.png" height="50" width="50" alt="Halcyon Days Template"><span>Halcyon Days Template</span></a></li>
-					<li><a href="#"><img src="img/ArticleIntroEffects.png" height="50" width="50" alt="Inspiration for Article Intro Effects"><span>Inspiration for Article Intro Effects</span></a></li>
-					<li><a href="#"><img src="img/DraggableDualViewSlideshow.png" height="50" width="50" alt="Draggable Dual-View Slideshow"><span>Draggable Dual-View Slideshow</span></a></li>
+					<li><a href="#"><img src="img/PagePreloadingEffect.png" height="50" width="50" alt="Page Preloading Effect"><h3>Page Preloading Effect</h3></a></li>
+					<li><a href="#"><img src="img/ArrowNavigationStyles.png" height="50" width="50" alt="Arrow Navigation Styles"><h3>Arrow Navigation Styles</h3></a></li>
+					<li><a href="#"><img src="img/HoverEffectsIdeasNew.png" height="50" width="50" alt="Ideas for Subtle Hover Effects"><h3>Ideas for Subtle Hover Effects</h3></a></li>
+					<li><a href="#"><img src="img/FreebieHalcyonDays.png" height="50" width="50" alt="Halcyon Days Template"><h3>Halcyon Days Template</h3></a></li>
+					<li><a href="#"><img src="img/ArticleIntroEffects.png" height="50" width="50" alt="Inspiration for Article Intro Effects"><h3>Inspiration for Article Intro Effects</h3></a></li>
+					<li><a href="#"><img src="img/DraggableDualViewSlideshow.png" height="50" width="50" alt="Draggable Dual-View Slideshow"><h3>Draggable Dual-View Slideshow</h3></a></li>
 				</ul>
 			</aside>
 			<aside class="recent">
-				<h3>Recent</h3>
+				<h2>Recent</h2>
 				<ul>
-					<li><a href="#"><img src="img/TooltipStylesInspiration.png" height="50" width="50" alt="Tooltip Styles Inspiration"><span>Tooltip Styles Inspiration</span></a></li>
-					<li><a href="#"><img src="img/AnimatedHeaderBackgrounds.png" height="50" width="50" alt="Animated Background Headers"><span>Animated Background Headers</span></a></li>
-					<li><a href="#"><img src="img/OffCanvas.png" height="50" width="50" alt="Off-Canvas Menu Effects"><span>Off-Canvas Menu Effects</span></a></li>
-					<li><a href="#"><img src="img/TabStyles.png" height="50" width="50" alt="Tab Styles Inspiration"><span>Tab Styles Inspiration</span></a></li>
-					<li><a href="#"><img src="img/ResponsiveSVGs.png" height="50" width="50" alt="Make SVGs Responsive with CSS"><span>Make SVGs Responsive with CSS</span></a></li>
-					<li><a href="#"><img src="img/NotificationStyles.png" height="50" width="50"><span>Notification Styles Inspiration</span></a></li>
+					<li><a href="#"><img src="img/TooltipStylesInspiration.png" height="50" width="50" alt="Tooltip Styles Inspiration"><h3>Tooltip Styles Inspiration</h3></a></li>
+					<li><a href="#"><img src="img/AnimatedHeaderBackgrounds.png" height="50" width="50" alt="Animated Background Headers"><h3>Animated Background Headers</h3></a></li>
+					<li><a href="#"><img src="img/OffCanvas.png" height="50" width="50" alt="Off-Canvas Menu Effects"><h3>Off-Canvas Menu Effects</h3></a></li>
+					<li><a href="#"><img src="img/TabStyles.png" height="50" width="50" alt="Tab Styles Inspiration"><h3>Tab Styles Inspiration</h3></a></li>
+					<li><a href="#"><img src="img/ResponsiveSVGs.png" height="50" width="50" alt="Make SVGs Responsive with CSS"><h3>Make SVGs Responsive with CSS</h3></a></li>
+					<li><a href="#"><img src="img/NotificationStyles.png" height="50" width="50" alt="Notification Styles Inspiration"><h3>Notification Styles Inspiration</h3></a></li>
 				</ul>
 			</aside>
 		</main>
